fixed overlapping class names

--- a/src/components/AboutBody/AboutBody.css
+++ b/src/components/AboutBody/AboutBody.css
@@ -1,4 +1,4 @@
-.text {
+.about-text {
     padding-bottom: 1em;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 1.3rem;
